CHANGELOG - ZERO POINT responsive theme for Drupal 7

0 Point 7.x-4.7 (Nov 6, 2015)
------------------------------
    o added "narrower" setting for sidebars (#2597245: Left sidebar width ...)
    o added "show dropdown" setting
    o added "Search engine optimization (SEO) settings"
    o added theme's slideshow (thanks to Pradeep Saran and Mheinke)

0 Point 7.x-4.6 (Sep 26, 2015)
------------------------------
    o Minor bugs were addressed

0 Point 7.x-4.5 (Sep 6, 2015)
------------------------------
    o Minor bugs were addressed

0 Point 7.x-4.4 (Aug 28, 2015)
------------------------------
    o #2536752: Round user pictures; CSS was moved to _custom-style.css
    o Improved header image rotator
    o #2513662: The bugy behaviour of the menu system in multilang environment was corrected
    o Dropdown CSS for mobile devices optimization
    o Minor bugs were addressed

0 Point 7.x-4.2 (May 29, 2015)
------------------------------
    o #2495211: Responsive menu not showing 3rd level
    o Mobile menu colors improvements

0 Point 7.x-4.1 (Apr 28, 2015)
------------------------------
    o Fully responsive Zero Point branch using Yahoo Pure.css Framework
    o A complete theme redesign made with mobile in mind: compatible, light and fast.